add first methode signature in doc
